# snake

./: .directory  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: SnakeComponent.h  defs.h  field.h  snake.h  sqrt.h
src/: SnakeComponent.cpp  field.cpp  main.cpp  snake.cpp  sqrt.cpp  window.cpp
test/: SnakeComponent.spec.cpp  snake.spec.cpp  sqrt.spec.cpp  tests-main.cpp
